After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 761366 - Fix build when verbose debug output is enabled
Fix build when verbose debug output is enabled
Status: RESOLVED FIXED
Product: gjs
Classification: Bindings
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: gjs-maint
gjs-maint
Depends on:
Blocks:
 
 
Reported: 2016-01-31 17:01 UTC by Hashem Nasarat
Modified: 2016-02-10 17:57 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix build when verbose debug output is enabled (7.93 KB, patch)
2016-01-31 17:01 UTC, Hashem Nasarat
none Details | Review
Fix build when verbose debug output is enabled (8.23 KB, patch)
2016-02-10 17:57 UTC, Hashem Nasarat
committed Details | Review

Description Hashem Nasarat 2016-01-31 17:01:53 UTC
Mostly this commit updates JSHandle* usage in debug statement to fix
invalid use of incomplete type 'class JSObject':

    In 9daff9c4 the type of JSHandle* objects was changed but the debug
    statements were left as is. This commit fixes this oversight so
    GJS_DEBUG_OUTPUT can be used again.

Other small fixes due to code rot were fixed.

With this commit you can set all the GJS_VERBOSE_ENABLE macros to 1,
recompile, unset GJS_DEBUG_TOPICS, and get all the verbose debug output
from gjs.
Comment 1 Hashem Nasarat 2016-01-31 17:01:56 UTC
Created attachment 320136 [details] [review]
Fix build when verbose debug output is enabled
Comment 2 Cosimo Cecchi 2016-02-09 17:47:28 UTC
Review of attachment 320136 [details] [review]:

Looks good, with one nit fixed.

::: gi/function.cpp
@@ +1316,1 @@
                                           JS_TypeOfValue(context, OBJECT_TO_JSVAL(object))));

Fix indentation of this line
Comment 3 Hashem Nasarat 2016-02-10 17:57:00 UTC
Created attachment 320814 [details] [review]
Fix build when verbose debug output is enabled

Mostly this commit updates JSHandle* usage in debug statement to fix
invalid use of incomplete type 'class JSObject':

    In 9daff9c4 the type of JSHandle* objects was changed but the debug
    statements were left as is. This commit fixes this oversight so
    GJS_DEBUG_OUTPUT can be used again.

Other small fixes due to code rot were fixed.

With this commit you can set all the GJS_VERBOSE_ENABLE macros to 1,
recompile, unset GJS_DEBUG_TOPICS, and get all the verbose debug output
from gjs.
Comment 4 Hashem Nasarat 2016-02-10 17:57:24 UTC
Attachment 320814 [details] pushed as e999545 - Fix build when verbose debug output is enabled