Fix build when verbose debug output is enabled

Mostly this commit updates JSHandle* usage in debug statement to fix
invalid use of incomplete type 'class JSObject':

    In 9daff9c4 the type of JSHandle* objects was changed but the debug
    statements were left as is. This commit fixes this oversight so
    GJS_DEBUG_OUTPUT can be used again.

Other small fixes due to code rot were fixed.

With this commit you can set all the GJS_VERBOSE_ENABLE macros to 1,
recompile, unset GJS_DEBUG_TOPICS, and get all the verbose debug output
from gjs.

https://bugzilla.gnome.org/show_bug.cgi?id=761366