gjs/importer.cpp
@@ -872,7 +872,9 @@ importer_new_resolve(JSContext *context,
         goto out;
     priv = priv_from_js(context, obj);
 
-    gjs_debug_jsprop(GJS_DEBUG_IMPORTER, "Resolve prop '%s' hook obj %p priv %p", name, *obj, priv);
+    gjs_debug_jsprop(GJS_DEBUG_IMPORTER,
+                     "Resolve prop '%s' hook obj %p priv %p",
+                     name, (void *)obj, priv);
     if (priv == NULL) /* we are the prototype, or have the wrong class */
         goto out;
     JS_BeginRequest(context);
